--- a/map1.html
+++ b/map1.html
@@ -103,9 +103,15 @@
       background-color: #6a0dad !important;
       box-shadow: 0 2px 8px rgba(106,13,173,0.7) !important;
     }
-    #toggleLeftBtn { left: 10px; }
-    #toggleRightBtn { right: 10px; }
-
+    #toggleLeftBtn {
+      left: 10px;
+      background-color: #6a0dad; /* violet */
+      box-shadow: 0 2px 8px rgba(106,13,173,0.7);
+      color: white;
+    }
+    #toggleRightBtn {
+      right: 10px;
+    }
     .hidden { display: none !important; }
   </style>
 </head>
@@ -421,7 +427,7 @@ document.getElementById('convertBtn').onclick = () => {
       if (cp.length > 0) extraProperties[cp] = item;
     });
 
-    // Initialiser filtres tout coché
+    // Initialise filtres à tout coché
     Object.keys(filterState).forEach(key => {
       filterState[key].forEach((_, val) => filterState[key].set(val, true));
     });
