--- a/map1.html
+++ b/map1.html
@@ -103,15 +103,9 @@
       background-color: #6a0dad !important;
       box-shadow: 0 2px 8px rgba(106,13,173,0.7) !important;
     }
-    #toggleLeftBtn {
-      left: 10px;
-      background-color: #6a0dad; /* violet */
-      box-shadow: 0 2px 8px rgba(106,13,173,0.7);
-      color: white;
-    }
-    #toggleRightBtn {
-      right: 10px;
-    }
+    #toggleLeftBtn { left: 10px; }
+    #toggleRightBtn { right: 10px; }
+
     .hidden { display: none !important; }
   </style>
 </head>
@@ -224,6 +218,10 @@ function buildFilterList(filterName, containerId) {
 
     const checkbox = document.createElement('input');
     checkbox.type = 'checkbox';
+    // Mettre état à true si pas présent encore dans filterState
+    if (!filterState[filterName].has(val)) {
+      filterState[filterName].set(val, true);
+    }
     checkbox.checked = filterState[filterName].get(val) !== false;
 
     checkbox.addEventListener('change', () => {
@@ -303,7 +301,9 @@ document.getElementById('toggleRightBtn').addEventListener('click', () => {
 });
 
 function isAnyChecked(filterName) {
-  return Array.from(filterState[filterName].values()).some(v => v === true);
+  const states = Array.from(filterState[filterName].values());
+  if(states.length === 0) return true;
+  return states.some(v => v === true);
 }
 
 function filterGeoLayer() {
@@ -427,9 +427,11 @@ document.getElementById('convertBtn').onclick = () => {
       if (cp.length > 0) extraProperties[cp] = item;
     });
 
-    // Initialise filtres à tout coché
-    Object.keys(filterState).forEach(key => {
-      filterState[key].forEach((_, val) => filterState[key].set(val, true));
+    // Initialise les états des filtres à true
+    Object.keys(distinctValues).forEach(filterName => {
+      distinctValues[filterName].forEach((_, val) => {
+        filterState[filterName].set(val, true);
+      });
     });
 
     buildFilterLists();
