--- a/map1.html
+++ b/map1.html
@@ -8,22 +8,33 @@
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/xlsx@0.18.5/dist/xlsx.full.min.js"></script>
   <style>
-    html, body { margin:0; padding:0; height:100%; font-family:Arial,sans-serif; overflow:hidden; }
-    body { display:flex; height:100vh; user-select:none; }
-    #sidebar-left,#sidebar-right { background:#000; color:white; overflow-y:auto; padding:10px; box-shadow:2px 0 5px rgba(0,0,0,0.3); font-size:14px; min-width:180px; max-width:400px; resize:horizontal; }
-    #sidebar-left { border-right:1px solid #444; width:250px; }
-    #sidebar-right { border-left:1px solid #444; width:250px; }
-    #map { flex-grow:1; height:100vh; }
-    label { display:block; margin-bottom:6px; cursor:pointer; user-select:text; color:white; }
-    #controls { padding:10px; background:#111; position:sticky; top:0; z-index:1000; border-bottom:1px solid #444; margin-bottom:10px; user-select:none; color:white; }
-    .custom-tooltip { font-weight:bold; }
-    .selectall-label { font-weight:bold; margin-top:6px; border-bottom:1px solid #444; padding-bottom:2px; cursor:pointer; user-select:none; color:white; }
-    .toggle-btn { font-size:14px; background:#007bff; border:none; color:white; padding:4px 10px; border-radius:4px; cursor:pointer; user-select:none; margin:10px 0 6px 0; width:100%; text-align:left; }
-    #toggleLeftBtn,#toggleRightBtn { position:fixed; top:10px; padding:8px 14px; font-size:14px; border-radius:4px; cursor:pointer; z-index:1300; user-select:none; box-shadow:0 2px 8px rgba(0,0,0,0.3); color:white; }
-    #toggleLeftBtn { left:10px; background:#6a0dad; box-shadow:0 0 10px #6a0dad; }
-    #toggleRightBtn { right:10px; background:#00bfff; box-shadow:0 0 10px #00bfff; }
-    .hidden { display:none !important; }
-    input[disabled] { filter:grayscale(1) brightness(1.3); }
+    html, body {margin:0; padding:0; height:100%; font-family:Arial,sans-serif; overflow:hidden;}
+    body {display:flex; height:100vh; user-select:none;}
+    #sidebar-left,#sidebar-right {background:#000; color:white; overflow-y:auto; padding:10px; box-shadow:2px 0 5px rgba(0,0,0,0.3); font-size:14px; min-width:180px; max-width:400px; resize:horizontal;}
+    #sidebar-left {border-right:1px solid #444; width:250px;}
+    #sidebar-right {border-left:1px solid #444; width:250px;}
+    #map {flex-grow:1; height:100vh;}
+    label {display:block; margin-bottom:6px; cursor:pointer; user-select:text; color:white;}
+    #controls {padding:10px; background:#111; position:sticky; top:0; z-index:1000; border-bottom:1px solid #444; margin-bottom:10px; user-select:none; color:white;}
+    .custom-tooltip {font-weight:bold;}
+    .selectall-label {font-weight:bold; margin-top:6px; border-bottom:1px solid #444; padding-bottom:2px; cursor:pointer; user-select:none; color:white;}
+    .toggle-btn {font-size:14px; background:#007bff; border:none; color:white; padding:4px 10px; border-radius:4px; cursor:pointer; user-select:none; margin:10px 0 6px 0; width:100%; text-align:left;}
+    #toggleLeftBtn, #toggleRightBtn {
+      position: fixed; top: 10px; padding: 8px 14px; font-size: 14px; border-radius: 4px; cursor: pointer;
+      user-select:none; box-shadow: 0 2px 8px rgba(0,0,0,0.3); color: white;
+    }
+    #toggleLeftBtn {
+      left: 10px;
+      background-color: #ff0000; /* rouge */
+      box-shadow: 0 2px 8px rgba(255,0,0,0.7);
+    }
+    #toggleRightBtn {
+      right: 10px;
+      background-color: #00bfff;
+      box-shadow: 0 2px 8px rgba(0,191,255,0.7);
+    }
+    .hidden {display:none !important;}
+    input[disabled] {filter:grayscale(1) brightness(1.3);}
   </style>
 </head>
 <body>
@@ -75,180 +86,112 @@
 </div>
 <script>
 var map = L.map('map', { minZoom: 6, center: [46.5, 2.5], zoom: 6 });
-L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
-  maxZoom:18, attribution:'© OpenStreetMap contributors'
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+  maxZoom: 18, attribution: '© OpenStreetMap contributors'
 }).addTo(map);
-
 let extraProperties = {}, geoLayer;
 const fields = ['agence', 'region', 'antenne', 'departement', 'texte2', 'dsp', 'canaldis'];
 let distinctValues = {}, filterState = {};
-fields.forEach(f => {
-  distinctValues[f] = new Map();
-  filterState[f] = new Map();
-});
-
+fields.forEach(f => { distinctValues[f] = new Map(); filterState[f] = new Map(); });
 function getKey(obj, key) {
   const lkey = key.toLowerCase().replace(/\s+/g,'');
-  for (const k in obj)
-    if (k.toLowerCase().replace(/\s+/g,'') === lkey)
-      return obj[k];
+  for (const k in obj) if (k.toLowerCase().replace(/\s+/g,'') === lkey) return obj[k];
   return '';
 }
-
-function updateFiltersAndMap() {
-  // Get all CP matching current filters
-  let validCPs = [];
-  for (let cp in extraProperties) {
+function getFilteredCPs() {
+  let res = [];
+  for(let cp in extraProperties) {
     const ex = extraProperties[cp];
-    let keep = true;
-    for (let f of fields) {
-      const val = getKey(ex, f.charAt(0).toUpperCase() + f.slice(1));
-      if (val && filterState[f].has(val) && filterState[f].get(val) === false) {
-        keep = false;
-        break;
-      }
-    }
-    if (keep)
-      validCPs.push(cp);
+    if(!ex) continue;
+    if(fields.every(f => {
+      const val = getKey(ex,f.charAt(0).toUpperCase() + f.slice(1));
+      return !(filterState[f].has(val) && filterState[f].get(val) === false);
+    })) res.push(cp);
   }
-
-  // Determine which filter values are possible given current CP
-  const possibleVals = {};
-  fields.forEach(f => possibleVals[f] = new Set());
+  return res;
+}
+function updateDynamicFilterLists() {
+  let validCPs = getFilteredCPs();
+  let compatible = {};
+  fields.forEach(f=> compatible[f]=new Set());
   validCPs.forEach(cp => {
-    const ex = extraProperties[cp];
+    const ex=extraProperties[cp];
     fields.forEach(f => {
-      const val = getKey(ex, f.charAt(0).toUpperCase() + f.slice(1));
-      if(val)
-        possibleVals[f].add(val);
+      let val = getKey(ex,f.charAt(0).toUpperCase()+f.slice(1));
+      if(val) compatible[f].add(val);
     });
   });
-
-  // Update UI filters, maintain state, update disabled/checked
   fields.forEach(f => {
     const container = document.getElementById(f+'List');
-    if (!container) return;
+    if(!container) return;
     container.innerHTML = '';
-    // Show all values, disable those not in possibleVals
-    distinctValues[f].forEach((_, val) => {
+    let allVals = Array.from(distinctValues[f].keys()).sort();
+    allVals.forEach(val => {
       const label = document.createElement('label');
-      label.title = ` ${distinctValues[f].get(val).size} codes postaux`;
-      const cb = document.createElement('input');
-      cb.type = 'checkbox';
-      const isPossible = possibleVals[f].has(val);
-      cb.disabled = !isPossible;
-      // Maintain checked state or check default true
-      if (!filterState[f].has(val)) filterState[f].set(val, true);
-      cb.checked = filterState[f].get(val) === true && isPossible;
-      cb.addEventListener('change', () => {
-        filterState[f].set(val, cb.checked);
-        updateFiltersAndMap();
+      label.title = `${distinctValues[f].get(val).size} codes postaux`;
+      const cbox = document.createElement('input');
+      cbox.type = 'checkbox';
+      // Conserver l’état dans filterState, défaut à true pour nouvelles valeurs
+      if (!filterState[f].has(val)) filterState[f].set(val,true);
+      cbox.checked = filterState[f].get(val) === true;
+      cbox.disabled = !compatible[f].has(val);
+      cbox.addEventListener('change', () => {
+        filterState[f].set(val, cbox.checked);
+        updateDynamicFilterLists();
+        filterGeoLayer();
       });
-      label.appendChild(cb);
-      label.appendChild(document.createTextNode(' '+val));
-      container.appendChild(label);
-    });
-    updateSelectAll(f);
-  });
-
-  // Update map layer visibility
-  if (!geoLayer) return;
-  geoLayer.eachLayer(layer => {
-    const cp = layer.feature.properties.code_postal || layer.feature.properties.codePostal || layer.feature.properties.code || '';
-    if (validCPs.includes(cp))
-      layer.addTo(map);
-    else
-      map.removeLayer(layer);
-  });
-}
-
-function updateSelectAll(f) {
-  const selectAll = document.getElementById(f+'-select-all');
-  if (!selectAll) return;
-  const container = document.getElementById(f+'List');
-  if (!container) {
-    selectAll.checked = false;
-    selectAll.indeterminate = false;
-    return;
-  }
-  const inputs = Array.from(container.querySelectorAll('input:not(:disabled)'));
-  if (inputs.length === 0) {
-    selectAll.checked = false;
-    selectAll.indeterminate = false;
-    return;
-  }
-  const allChecked = inputs.every(cb=>cb.checked);
-  const anyChecked = inputs.some(cb=>cb.checked);
-  selectAll.checked = allChecked;
-  selectAll.indeterminate = !allChecked && anyChecked;
-}
-
-function setupSelectAllListeners() {
-  fields.forEach(f => {
-    const selectAll = document.getElementById(f+'-select-all');
-    if (selectAll)
-      selectAll.addEventListener('change', () => {
-        const container = document.getElementById(f+'List');
-        if (!container) return;
-        const check = selectAll.checked;
-        Array.from(container.querySelectorAll('input:not(:disabled)')).forEach(cb => {
-          cb.checked = check;
-          filterState[f].set(cb.nextSibling.textContent.trim(), check);
-        });
-        updateFiltersAndMap();
-      });
-  });
-}
-
-function buildFilters() {
-  fields.forEach(f => {
-    const container = document.getElementById(f + 'List');
-    if (!container) return;
-    container.innerHTML = '';
-    distinctValues[f].forEach((_, val) => {
-      const label = document.createElement('label');
-      label.title = ` ${distinctValues[f].get(val).size} codes postaux`;
-      const cb = document.createElement('input');
-      cb.type = 'checkbox';
-      filterState[f].set(val, true);
-      cb.checked = true;
-      cb.addEventListener('change', () => {
-        filterState[f].set(val, cb.checked);
-        updateFiltersAndMap();
-      });
-      label.appendChild(cb);
+      label.appendChild(cbox);
       label.appendChild(document.createTextNode(' ' + val));
       container.appendChild(label);
     });
-
-    const selectAll = document.getElementById(f + '-select-all');
-    if (selectAll) {
-      selectAll.checked = true;
-      selectAll.indeterminate = false;
-    }
+    updateSelectAllCheckbox(f);
   });
-  setupSelectAllListeners();
-  setupToggleButtons();
 }
-
-function setupToggleButtons() {
+function updateSelectAllCheckbox(filterName) {
+  const selectAllCheckbox = document.getElementById(filterName + '-select-all');
+  if(!selectAllCheckbox) return;
+  const inputs = Array.from(document.getElementById(filterName+'List').querySelectorAll('input[type="checkbox"]:not([disabled])'));
+  if (inputs.length === 0) {
+    selectAllCheckbox.checked = false;
+    selectAllCheckbox.indeterminate = false;
+    return;
+  }
+  const allChecked = inputs.every(cb => cb.checked);
+  const anyChecked = inputs.some(cb => cb.checked);
+  selectAllCheckbox.checked = allChecked;
+  selectAllCheckbox.indeterminate = !allChecked && anyChecked;
+}
+function setupSelectAllListener(filterName) {
+  const selectAllCheckbox = document.getElementById(filterName + '-select-all');
+  if(!selectAllCheckbox) return;
+  selectAllCheckbox.addEventListener('change', () => {
+    const checked = selectAllCheckbox.checked;
+    const container = document.getElementById(filterName+'List');
+    Array.from(container.querySelectorAll('input[type="checkbox"]:not([disabled])')).forEach(cb => {
+      cb.checked = checked;
+      filterState[filterName].set(cb.nextSibling.textContent.trim(), checked);
+    });
+    updateDynamicFilterLists();
+    filterGeoLayer();
+  });
+}
+function setupFilterToggleButtons() {
   document.querySelectorAll('.toggle-btn').forEach(btn => {
     const target = btn.getAttribute('data-target');
     btn.textContent = target.charAt(0).toUpperCase() + target.slice(1);
     btn.addEventListener('click', () => {
-      const container = document.getElementById('filter-' + target);
-      if (!container) return;
-      if (container.classList.contains('hidden')) {
-        container.classList.remove('hidden');
-        btn.textContent = 'Masquer ' + (target.charAt(0).toUpperCase() + target.slice(1));
+      const elt = document.getElementById('filter-'+target);
+      if(!elt) return;
+      if(elt.classList.contains('hidden')) {
+        elt.classList.remove('hidden');
+        btn.textContent = 'Masquer ' + target.charAt(0).toUpperCase() + target.slice(1);
       } else {
-        container.classList.add('hidden');
+        elt.classList.add('hidden');
         btn.textContent = target.charAt(0).toUpperCase() + target.slice(1);
       }
     });
   });
 }
-
 document.getElementById('toggleLeftBtn').addEventListener('click', () => {
   const left = document.getElementById('sidebar-left');
   left.style.display = left.style.display === 'none' ? 'block' : 'none';
@@ -257,60 +200,112 @@ document.getElementById('toggleRightBtn').addEventListener('click', () => {
   const right = document.getElementById('sidebar-right');
   right.style.display = right.style.display === 'none' ? 'block' : 'none';
 });
-
 document.getElementById('convertBtn').addEventListener('click', () => {
   const fileInput = document.getElementById('uploadExcel');
   const file = fileInput.files[0];
-  if (!file) {
+  if(!file) {
     alert("Sélectionnez un fichier Excel (.xlsx) avant de continuer.");
     return;
   }
   const reader = new FileReader();
   reader.onload = e => {
     const data = new Uint8Array(e.target.result);
-    const workbook = XLSX.read(data, { type: 'array' });
+    const workbook = XLSX.read(data, {type:'array'});
     const firstSheet = workbook.SheetNames[0];
     const jsonData = XLSX.utils.sheet_to_json(workbook.Sheets[firstSheet]);
 
     extraProperties = {};
-    for (let f of fields) {
-      distinctValues[f].clear();
-      filterState[f].clear();
-    }
+    fields.forEach(f => { distinctValues[f].clear(); filterState[f].clear(); });
 
     jsonData.forEach(item => {
       const cp = item["Code Postal"] ? item["Code Postal"].toString() : "";
-      if (!cp) return;
+      if(!cp) return;
       extraProperties[cp] = item;
-
       fields.forEach(f => {
-        let val = getKey(item, f.charAt(0).toUpperCase() + f.slice(1)) || '';
-        if (!distinctValues[f].has(val)) distinctValues[f].set(val, new Set());
+        const val = getKey(item, f.charAt(0).toUpperCase() + f.slice(1));
+        if(!distinctValues[f].has(val)) distinctValues[f].set(val, new Set());
         distinctValues[f].get(val).add(cp);
       });
     });
 
-    for (let f of fields) {
+    // Initialise filterState avec toutes valeurs cochées
+    fields.forEach(f => {
       distinctValues[f].forEach((_, val) => {
-        filterState[f].set(val, true);
+        if(!filterState[f].has(val)) filterState[f].set(val, true);
       });
-    }
+    });
 
     buildFilters();
-    updateFiltersAndMap();
+    updateDynamicFilterLists();
+    filterGeoLayer();
     map.setView([46.5, 2.5], 6);
-
-    setTimeout(() => alert("Conversion et affichage réalisés !"), 200);
+    setTimeout(() => alert('Conversion et affichage réalisés !'), 200);
   };
   reader.readAsArrayBuffer(file);
 });
-
-function getKey(obj, key) {
-  const lkey = key.toLowerCase().replace(/\s+/g, '');
-  for (const k in obj) {
-    if (k.toLowerCase().replace(/\s+/g, '') === lkey) return obj[k];
-  }
-  return '';
+function buildFilters() {
+  fields.forEach(f => {
+    const container = document.getElementById(f + 'List');
+    container.innerHTML = '';
+    distinctValues[f].forEach((_, val) => {
+      const label = document.createElement('label');
+      label.title = `${distinctValues[f].get(val).size} codes postaux`;
+      const cbox = document.createElement('input');
+      cbox.type = 'checkbox';
+      cbox.checked = filterState[f].get(val) !== false;
+      cbox.addEventListener('change', () => {
+        filterState[f].set(val, cbox.checked);
+        updateDynamicFilterLists();
+        filterGeoLayer();
+      });
+      label.appendChild(cbox);
+      label.appendChild(document.createTextNode(' ' + val));
+      container.appendChild(label);
+    });
+    updateSelectAllCheckbox(f);
+    setupSelectAllListener(f);
+  });
+  setupFilterToggleButtons();
+}
+function updateMapWithExtraProperties() {
+  fetch('contours-codes-postaux.geojson')
+    .then(res => { if(!res.ok) throw new Error("Le fichier GeoJSON n'a pas été chargé correctement."); return res.json(); })
+    .then(data => {
+      if(geoLayer) map.removeLayer(geoLayer);
+      geoLayer = L.geoJSON(data, {
+        style: feature => {
+          const cp = feature.properties.code_postal || feature.properties.codePostal || feature.properties.code || "";
+          const ex = extraProperties[cp] || {};
+          return {
+            fillColor: getKey(ex, "Fond_couleur") || "#66cc66",
+            color: getKey(ex, "Ligne_couleur") || "#000000",
+            weight: 1,
+            opacity: 1,
+            fillOpacity: 0.7
+          };
+        },
+        onEachFeature: (feature, layer) => {
+          const cp = feature.properties.code_postal || feature.properties.codePostal || feature.properties.code || "";
+          const ex = extraProperties[cp] || {};
+          const texts = ["Texte1", "Texte2", "Texte3", "Texte4"].map(f => getKey(ex, f)).filter(Boolean);
+          const tooltipText = texts.join(" ");
+          const policeCouleur = getKey(ex, "police couleur") || '#000000';
+          layer.bindTooltip(`<span style="color: ${policeCouleur};">${tooltipText || ("Code Postal : " + cp)}</span>`, { className: 'custom-tooltip' });
+          const clicUrl = getKey(ex, "Clic URL");
+          if(clicUrl && clicUrl.trim().length > 0) {
+            layer.on("click", () => window.open(clicUrl, '_blank'));
+            layer.setStyle({ cursor: "pointer" });
+          }
+        }
+      }).addTo(map);
+      updateDynamicFilterLists();
+      filterGeoLayer();
+    })
+    .catch(err => {
+      alert(err.message);
+      console.error(err);
+      map.setView([46.5, 2.5], 6);
+    });
 }
 </script>
 </body>
